--- a/index.html
+++ b/index.html
@@ -3,8 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title data-lang="ru">Диас Нургазы — Архитектор — Портфолио</title>
   <title data-lang="en" style="display:none">Dias Nurgazy — Architect — Portfolio</title>
+
+  <meta name="description" content="Портфолио архитектора Диаса Нургазы из Астаны. Современные и функциональные решения, проекты фасадов, интерьеров и эко-домов.">
+  <meta name="keywords" content="архитектор, Астана, Диас Нургазы, портфолио, дизайн, интерьер, фасад, эко-дом, архитектурные проекты">
+  <meta name="author" content="Диас Нургазы">
+
+  <meta property="og:title" content="Диас Нургазы — Архитектор — Портфолио">
+  <meta property="og:description" content="Современные архитектурные проекты от Диаса Нургазы из Астаны. Интерьеры, фасады и эко-дома.">
+  <meta property="og:image" content="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=1200&auto=format&fit=crop">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://yourwebsite.com">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Диас Нургазы — Архитектор — Портфолио">
+  <meta name="twitter:description" content="Современные архитектурные проекты от Диаса Нургазы из Астаны. Интерьеры, фасады и эко-дома.">
+  <meta name="twitter:image" content="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=1200&auto=format&fit=crop">
+
   <style>
     :root {
       --bg: #f9f9f9;
@@ -45,89 +62,45 @@
       font-weight: 500;
       transition: color 0.3s ease;
     }
-    nav a:hover {
-      color: var(--accent);
+    nav a:hover { color: var(--accent); }
+    .lang-switch { cursor:pointer; color:var(--accent); font-weight:600; margin-left:15px; transition:0.3s; }
+    .lang-switch:hover { opacity:0.7; }
+
+    section { padding: 80px 20px; max-width: 1000px; margin:auto; opacity:0; transform:translateY(40px); transition:0.8s; }
+    section.visible { opacity:1; transform:translateY(0); }
+    h1,h2,h3 { text-align:center; }
+
+    footer { background:white; text-align:center; padding:30px 20px; color:var(--muted); border-top:1px solid #eee; animation:fadeUp 1s ease-out; }
+
+    @keyframes fadeDown { from{opacity:0; transform:translateY(-30px);} to{opacity:1; transform:translateY(0);} }
+    @keyframes fadeUp { from{opacity:0; transform:translateY(20px);} to{opacity:1; transform:translateY(0);} }
+
+    /* Слайдер портфолио */
+    .slider-container { position: relative; width:100%; max-width:1000px; margin:40px auto; overflow:hidden; border-radius:10px; }
+    .slider-slide { display:none; text-align:center; }
+    .slider-slide.active { display:block; }
+    .slider-slide img { width:100%; height:500px; object-fit:cover; border-radius:10px; transition:transform 0.6s ease; }
+    .slider-slide img:hover { transform:scale(1.05); }
+    .slider-slide h3 { margin-top:15px; background:rgba(255,255,255,0.85); display:inline-block; padding:10px 15px; border-radius:5px; }
+
+    /* Контакты с большим шрифтом */
+    #contact p {
+      font-size: 22px; /* увеличенный размер */
+      line-height: 1.6;
+      text-align: center;
+      max-width: 700px;
+      margin: 20px auto;
     }
-    .lang-switch {
-      cursor: pointer;
+    #contact a {
       color: var(--accent);
+      text-decoration: none;
       font-weight: 600;
-      margin-left: 15px;
-      transition: opacity 0.3s ease;
     }
-    .lang-switch:hover {
-      opacity: 0.7;
-    }
-
-    section {
-      padding: 80px 20px;
-      max-width: 1000px;
-      margin: auto;
-      opacity: 0;
-      transform: translateY(40px);
-      transition: opacity 0.8s ease, transform 0.8s ease;
-    }
-    section.visible {
-      opacity: 1;
-      transform: translateY(0);
-    }
-
-    h1, h2, h3 {
-      text-align: center;
-    }
-
-    .projects {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 20px;
-      margin-top: 40px;
-    }
-    .project {
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      overflow: hidden;
-      transition: transform 0.4s ease, box-shadow 0.4s ease;
-    }
-    .project:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 4px 16px rgba(0,0,0,0.15);
-    }
-    .project img {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
-      display: block;
-      transition: transform 0.5s ease;
-    }
-    .project:hover img {
-      transform: scale(1.05);
-    }
-    .project h3 {
-      margin: 15px;
-    }
-
-    footer {
-      background: white;
-      text-align: center;
-      padding: 30px 20px;
-      color: var(--muted);
-      border-top: 1px solid #eee;
-      animation: fadeUp 1s ease-out;
-    }
-
-    /* --- Анимации --- */
-    @keyframes fadeDown {
-      from { opacity: 0; transform: translateY(-30px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-    @keyframes fadeUp {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
+    #contact a:hover { text-decoration: underline; }
   </style>
 </head>
 <body>
+
   <header>
     <div class="logo">D</div>
     <nav>
@@ -154,27 +127,29 @@
     </p>
   </section>
 
+  <!-- Слайдер Проектов -->
   <section id="projects">
     <h2 data-lang="ru">Проекты</h2>
     <h2 data-lang="en" style="display:none">Projects</h2>
-    <div class="projects">
-      <div class="project">
+
+    <div class="slider-container">
+      <div class="slider-slide active">
         <img src="https://images.unsplash.com/photo-1449844908441-8829872d2607?q=80&w=1200&auto=format&fit=crop" alt="Проект 1">
         <h3 data-lang="ru">Проект 1 — Современный фасад</h3>
         <h3 data-lang="en" style="display:none">Project 1 — Modern Facade</h3>
       </div>
-      <div class="project">
+      <div class="slider-slide">
         <img src="https://images.unsplash.com/photo-1501594907352-04cda38ebc29?q=80&w=1200&auto=format&fit=crop" alt="Проект 2">
         <h3 data-lang="ru">Проект 2 — Минимализм</h3>
         <h3 data-lang="en" style="display:none">Project 2 — Minimalism</h3>
       </div>
-      <div class="project">
+      <div class="slider-slide">
         <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=1200&auto=format&fit=crop" alt="Проект 3 — Интерьер">
         <h3 data-lang="ru">Проект 3 — Интерьер</h3>
         <h3 data-lang="en" style="display:none">Project 3 — Interior</h3>
       </div>
-      <div class="project">
-        <img src="https://images.unsplash.com/photo-1467269204594-9661b134dd2b?q=80&w=1200&auto=format&fit=crop" alt="Проект 4">
+      <div class="slider-slide">
+        <img src="https://images.unsplash.com/photo-1467269204594-9661b134dd2b?q=80&w=1200&auto=format&fit=crop" alt="Проект 4 — Эко-дом">
         <h3 data-lang="ru">Проект 4 — Эко-дом</h3>
         <h3 data-lang="en" style="display:none">Project 4 — Eco House</h3>
       </div>
@@ -184,12 +159,12 @@
   <section id="contact">
     <h2 data-lang="ru">Контакты</h2>
     <h2 data-lang="en" style="display:none">Contact</h2>
-    <p data-lang="ru" style="text-align:center;">
+    <p data-lang="ru">
       Instagram: <a href="https://www.instagram.com/d1as_n" target="_blank">@d1as_n</a><br>
       Тел: +7 700 000 0000<br>
       Город: Астана, Казахстан
     </p>
-    <p data-lang="en" style="text-align:center;display:none;">
+    <p data-lang="en" style="display:none;">
       Instagram: <a href="https://www.instagram.com/d1as_n" target="_blank">@d1as_n</a><br>
       Phone: +7 700 000 0000<br>
       City: Astana, Kazakhstan
@@ -221,6 +196,19 @@
     };
     window.addEventListener("scroll", showSection);
     showSection();
+
+    // Автослайдер проектов
+    const slides = document.querySelectorAll(".slider-slide");
+    let currentSlide = 0;
+    function showSlide(index) {
+      slides.forEach((slide,i)=>slide.classList.toggle("active", i===index));
+    }
+    function nextSlide() {
+      currentSlide = (currentSlide+1)%slides.length;
+      showSlide(currentSlide);
+    }
+    setInterval(nextSlide,4000);
+    showSlide(currentSlide);
   </script>
 </body>
 </html>
